# klotter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  KHR_debug.txt  annotated.html  assert_8h.html  assert_8h_source.html  assets_8h.html  assets_8h_source.html  bitfield_8h.html  bitfield_8h_source.html  blend_8h_source.html  building.md  camera_8h.html  camera_8h_source.html  cint_8h.html  cint_8h_source.html  clang-tidy  classes.html  code-city.html  colors_8h.html  colors_8h_source.html  compare_8h_source.html  compiler__warning_8h.html  compiler__warning_8h_source.html  constants_8h.html  constants_8h_source.html  coverage.03-lights.cc.82d5ff4aa63619294f15135a117de492.html  coverage.angle.cc.0e46dd3761f2874c7419dd884f806f49.html  coverage.angle.h.78cf8dfc733404d4b0d63a5ca3c36fd9.html  coverage.assert.cc.9151abf921978c6cdfa56d62e59663ad.html  coverage.assets.cc.947a795f24b5180548a8b65418dc35a8.html  coverage.assets.h.21e881a08c62f9d948d0fab86e53b9b5.html  coverage.camera.cc.45ab5c7988d9c13c6ba50cc257588d81.html  coverage.camera.h.f99e9cee91d971ac87c74dc47863eea2.html  coverage.cint.h.6bc31d3b278ee3e842c2c0765d92fb1f.html  coverage.color.cc.f04ca17fe90c87fe1dff4cde6b30e845.html  coverage.color.h.71121599679515a4217215b363fb7158.html  coverage.compute_common.hpp.2da85c9582d18bfd9a6857b22d2f9f52.html  (+471 more)
cmake/: CompilerWarnings.cmake
docs/: doxygen.ini  header.html
doxygen-html/: angle_8h.html  angle_8h_source.html  annotated.html  assert_8h.html  assets_8h.html  assets_8h_source.html  bitfield_8h_source.html  blend_8h.html  blend_8h_source.html  camera_8h.html  camera_8h_source.html  cint_8h.html  cint_8h_source.html  classes.html  color_8h.html  color_8h_source.html  colors_8h.html  colors_8h_source.html  compare_8h.html  compare_8h_source.html  compiler__warning_8h.html  constants_8h_source.html  cpp_8h.html  cpp_8h_source.html  cullface_8h.html  cullface_8h_source.html  debug_8h.html  debug_8h_source.html  dependency__glad_8h_source.html  dependency__glm_8h.html  dependency__glm_8h_source.html  dependency__sdl_8h.html  dir_0a15cfbbecb5f97b1f4d0d4d1ae63ab7.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5ccea4055fdf26cd97ad75656b2f2959.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ed8e069d0ef105186a164ea7dd41c1e5.html  dir_fb7305bc03bd6dd23ed7e38d8335176d.html  doxygen_crawl.html  dump_8h.html  (+479 more)
examples/: 01-cube.cc  02-scene.cc  03-lights.cc  03-transform.cc  CMakeLists.txt  main.cc  sample.cc  sample.h  scene.cc  scene.h
examples/01-cube/: 01-cube.cc
hero/: errors.html  header_hero_report.css  index.html  inspect_src_47klotter_47angle_46cc.html  inspect_src_47klotter_47angle_46h.html  inspect_src_47klotter_47assert_46cc.html  inspect_src_47klotter_47assert_46h.html  inspect_src_47klotter_47cint_46h.html  inspect_src_47klotter_47colors_46cc.html  inspect_src_47klotter_47colors_46h.html  inspect_src_47klotter_47compiler_warning_46h.html  inspect_src_47klotter_47cpp_46cc.html  inspect_src_47klotter_47cpp_46h.html  inspect_src_47klotter_47cpp_46test_46cc.html  inspect_src_47klotter_47dependency_glad_46h.html  inspect_src_47klotter_47dependency_glm_46cc.html  inspect_src_47klotter_47dependency_glm_46h.html  inspect_src_47klotter_47dependency_sdl_46cc.html  inspect_src_47klotter_47dependency_sdl_46h.html  inspect_src_47klotter_47dump_46cc.html  inspect_src_47klotter_47dump_46h.html  inspect_src_47klotter_47dump_46main_46cc.html  inspect_src_47klotter_47feature_flags_46h.html  inspect_src_47klotter_47hash_46h.html  inspect_src_47klotter_47imgui_46theme_46cc.html  inspect_src_47klotter_47imgui_46theme_46h.html  inspect_src_47klotter_47klotter_46cc.html  inspect_src_47klotter_47klotter_46h.html  inspect_src_47klotter_47log_46h.html  inspect_src_47klotter_47main_46test_46cc.html  inspect_src_47klotter_47pch_46private_46h.html  inspect_src_47klotter_47pch_46public_46h.html  (+92 more)
search/: all_0.js  all_1.js  all_10.js  (+157 more)
src/: CMakeLists.txt
src/klotter/: angle.cc  angle.h  assert.cc  assert.h  bitfield.h  cint.h  colors.cc  colors.h  compiler_warning.h  cpp.cc  cpp.h  cpp.test.cc  dependency_glad.h  dependency_glm.cc  dependency_glm.h  dependency_opengl.cc  dependency_opengl.h  dependency_sdl.cc  dump.cc  dump.h  dump.main.cc  hash.h  im_colors.h  imgui.theme.cc  imgui.theme.h  klotter.cc  klotter.h  log.h  main.test.cc  pch.private.h  pch.public.h  preproc.h  result.cc  result.h  scene.cc  scene.h  scurve.cc  scurve.h  scurve.test.cc  str.cc  (+10 more)
src/klotter/input/: axis.cc  axis.h  key.cc  key.h
src/klotter/render/: assets.cc  assets.h  blend.cc  blend.h  camera.cc  camera.h  color.cc  color.h  color.test.cc  compare.cc  compare.h  compiled.mesh.cc  compiled.mesh.h  constants.h  cullface.cc  cullface.h  debug.cc  debug.h  default_shader.frag.glsl  default_shader.vert.glsl  enable_high_performance_graphics.h  framebuffer.cc  framebuffer.h  fse.cc  fse.h  fullscreen.cc  fullscreen.h  fullscreeninfo.cc  fullscreeninfo.h  geom.builder.cc  geom.builder.h  geom.extract.cc  geom.extract.h  geom.h  light.h  linebatch.cc  linebatch.h  material.cc  material.h  material.property.cc  (+71 more)
src/klotter/render/shaders/: default_shader.frag.glsl  default_shader.vert.glsl  pp.always.frag.glsl  pp.damage.frag.glsl  pp.extract.frag.glsl  pp.grayscale.frag.glsl  pp.realize.frag.glsl  skybox.vert.glsl
src/shaders/: basic.frag.glsl  default.frag.glsl  light.vert.glsl  unlit.vert.glsl
src/textures/: readme.md
src/three/: assert.cc  assert.h  colors.cc  compiler_warning.h  dependency_glad.h  dependency_glm.cc  dependency_glm.h  dependency_opengl.cc  dependency_sdl.cc  dependency_sdl.h  pch.private.h  pch.public.h  result.cc  str.cc  str.h  three.cc  three.h  windows.sdl.convert.cc  windows.sdl.convert.h
src/three/input/: axis.cc  axis.h  key.cc  key.h
src/three/render/: camera.cc  camera.h  compiled.mesh.cc  compiled.mesh.h  light.h  material.property.cc  material.property.h  material.shader.source.cc  material.shader.source.h  mesh.cc  mesh.h  opengl_utils.cc  opengl_utils.h  render2.cc  render2.h  shader.cc  shader.h  shader.source.h  texture.cc  texture.h  uniform.cc  uniform.h
(+464 files in other folders)
